--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,8 @@
     {{ content }}
 </section>
 <footer>
-    &copy; IQB 2022
+    <img src="/assets/licenseCC_BY-SA.png" alt="CC BY-SA"/>
+    <p>&copy; IQB 2023</p>
 </footer>
 </body>
 </html>
